# hackathon2020-T5-facemask

./: README.md  区块链+知识图谱赋能工业产业链.pptx
back-end/: config.toml  go.mod  go.sum  main.go
back-end/config/: config.go  config_test.go  testconfig.toml
back-end/db/: db.go
back-end/db/context/: context.go
back-end/doc/: api-server.md
back-end/exterror/: code.go  errors.go  type.go
back-end/middleware/: authMiddleWare.go  crossMiddleWare.go  response.go  sessionMiddleWare.go  superAdminAuthMiddleWare.go
back-end/model/: platonecli.go  platonecli_utils.go  type.go  user.go
back-end/model/monitor/: credential.go  monitor.go
back-end/model/monitor/keys/: ca.cert
back-end/utils/: genpiblickey.go  utils.go
back-end/web/context/: context.go  response.go
back-end/web/controller/: monitor.go  platonecli.go  todolist.go  user.go
back-end/web/engine/: engine.go  handler.go
back-end/web/session/: gin_session.go  memory.go
contract/: CMakeLists.txt  README.txt
contract/src/: CMakeLists.txt  sc.cpp
disco-demo/: CONTRIBUTING.md  Dockerfile  LICENSE  angular.json  circle.yml  docker-compose.app.yml  karma.conf.js  ngsw-config.json  package-lock.json  package.json  proxy.conf.json  tsconfig.json
disco-demo/src/app/: app-routing.module.ts  app.module.ts
disco-demo/src/environments/: environment.github.ts  environment.ts
front-end/: README.md  package-lock.json  package.json  vue.config.js
front-end/public/: index.html
front-end/src/: App.vue  config.js  main.js  mock.js
front-end/src/router/: index.js
scripts/: cypher.txt
(+44 files in other folders)
